--- a/src/client/components/Auth/style.css
+++ b/src/client/components/Auth/style.css
@@ -5,3 +5,21 @@
 .signup-component .form-field {
     margin-bottom: 5px
 }
+.signup-component{
+    text-align: center;
+}
+.login-container {
+    text-align: center;
+}
+.login-container h1 {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.login-container button {
+    background-color: #ddddff;
+    color: black;
+}
+.signup-component button {
+    background-color: #ddddff;
+    color: black;
+}
