navbar edited, homepage fixed, webby ADDED

--- a/src/client/components/Home/style.css
+++ b/src/client/components/Home/style.css
@@ -7,7 +7,7 @@
 
 .homepage h1 {
     font-size:medium;
-       color:#951A4D
+       color:#2C2C54
 }
 .homepage button {
     background-color: #ddddff;
