Hover over links to get a helpful message, clicking names in the graph links to user profiles, and interests/names are color coded on the graph

--- a/src/client/components/Graph/style.css
+++ b/src/client/components/Graph/style.css
@@ -1,3 +1,9 @@
 .graph{
-    background-color: #fcf7f8
+    background-color: #fcf7f8;
+}
+
+.graph-wrapper{
+    display: flex;
+    background-color: #fcf7f8;
+    justify-content: center
 }
