--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
+  height: 100%;
+  padding: 0;
   margin: 0;
+  min-width: 300px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
