--- a/src/client/components/style.css
+++ b/src/client/components/style.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   justify-content: flex-start;
   height: 100%;
 }
