Reverting back to graphs from before light/dark modes to make sure that the bugs are coming from that feature and not something else.

--- a/src/client/components/Graph/style.css
+++ b/src/client/components/Graph/style.css
@@ -7,3 +7,5 @@
     background-color: #fcf7f8;
     justify-content: center
 }
+
+/* This is the CSS file from the commit right before we began making light/dark modes for the graph */
