--- a/src/client/components/Graph/style.css
+++ b/src/client/components/Graph/style.css
@@ -6,7 +6,7 @@
 .graph-wrapper{
     display: flex;
     background-color: #fcf7f8;
-    justify-content: center
+    justify-content: center;
 }
 
 /* This is the CSS file from the commit right before we began making light/dark modes for the graph */
