--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-body {
+html, body{
   height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
-  min-width: 350px;
+  min-width: 300px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,6 +18,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding-top: 70px;
+  height: 100%;
+}
+
+#content-body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
