--- a/src/client/components/Graph/style.css
+++ b/src/client/components/Graph/style.css
@@ -17,3 +17,11 @@ text {
     justify-content: center;
 }
 
+.nointerests {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
